syntax = "proto3";

package nest.microservices;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service StorageService {
  rpc get(GetStorageRequest) returns (StorageInfo);
  rpc list(ListStorageRequest) returns (ListStorageResponse);
  rpc initial(InitialStorageRequest) returns (google.protobuf.Empty);
  rpc myStorage(google.protobuf.Empty) returns (StorageInfo);

  rpc listFolder(ListFolderRequest) returns (ListFolderResponse);
  rpc createFolder(CreateFolderRequest) returns (FolderModel);
  rpc getFolder(GetFolderRequest) returns (GetFolderResponse);
  rpc getFolderContent(GetFolderContentRequest) returns (GetFolderContentResponse);
  rpc updateFolder(UpdateFolderRequest) returns (FolderModel);
  rpc deleteFolder(DeleteFolderRequest) returns (FolderModel);
}

message GetStorageRequest {
  optional string id = 1;
  optional string ref_id = 2;
  optional string owner_id =3 ;
}

message ListStorageRequest {
  map<string, string> filter = 1;
  optional int32 limit = 2;
  optional string offset = 3;
  map<string, string> sort = 4;
}

message ListStorageResponse {
  repeated StorageInfo items = 1;
}

message InitialStorageRequest {
  string owner_id = 6;
  optional string name = 1;
  optional string description = 2;
  optional string ref_id = 5;
  
  optional int64 used = 3; // init 0
  optional int64 total = 4; // init -1 for unlimited
}

message Owner {
  optional string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional string avatarURI = 4;
}

message FileRef {
  optional string id = 1;
  optional string name = 2;
  optional int64 size = 3;
  optional string createdAt = 4;
  optional string pinnedAt = 5;
  optional string modifiedAt = 6;
  optional string archivedAt = 7;
  optional string ownerId = 8;
  optional string contentType = 9;
  optional string thumbnail = 10;
  optional string description = 11;
}

message StorageInfo {
  optional string id = 1;
  optional string name = 2;
  optional int64 used = 3;
  optional int64 total = 4;
  map<string, string> metadata = 6;
  optional string refId = 5;
}

// ============== Folder Service ============== //
message GetFolderRequest {
  string id = 1;
}

message ListFolderRequest {
  map<string, string> filter = 1;
  map<string, string> sort = 2;
  optional int32 limit = 3;
  optional string cursor = 4;
  optional int32 offset = 5;
}

message GetFolderContentRequest {
  string id = 1;
  map<string, string> filter = 2;
  map<string, string> sort = 3;

  optional int32 limit = 4;
  optional string cursor = 5;
  optional int32 offset = 6;
}

message CreateFolderRequest {
  string ownerId = 1;
  optional string name = 2;
  optional string parentId = 3;
  optional string thumbnail = 4;
  optional string description = 5;
  optional string pinnedAt = 6;
  optional string archivedAt = 7;
}

message UpdateFolderRequest {
  string id = 1;
  optional string name = 3;
  optional string ownerId = 2;
  optional string thumbnail = 5;
  optional string description = 6;
}

message DeleteFolderRequest {
  string id = 1;
}

// -- Response
message FolderModel {
  string id = 1;
  optional string name = 2;
  optional int64 size = 3;
  optional string ownerId = 4;
  optional string parentId = 5;
  optional string createdAt = 6;
  optional string pinnedAt = 7;
  optional string modifiedAt = 8;
  optional string archivedAt = 9;
}

message GetFolderResponse {
  string id = 1;
  optional string name = 2;
  optional int64 size = 3;
  optional string ownerId = 4;
  optional string parentId = 5;
  optional string createdAt = 6;
  optional string pinnedAt = 7;
  optional string modifiedAt = 8;
  optional string archivedAt = 9;
}

message ListFolderResponse {
  message Item {
    string id = 1;
    optional string name = 2;
    optional int64 size = 3;
    optional string parentId = 4;
    optional string ownerId = 5;
    optional string createdAt = 6;
    optional string pinnedAt = 7;
    optional string modifiedAt = 8;
    optional string archivedAt = 9;
  }

  repeated Item items = 1;
  int32 total = 2;
  int32 limit = 3;
  optional string prevCursor = 4;
  optional string nextCursor = 5;
}

message GetFolderContentResponse {
  message Item {
    string id = 1;
    string kind = 2;
    optional string parentId = 3;
    optional string name = 4;
    optional string contentType = 5;
    optional string ownerId = 6;
    optional string createdAt = 7;
    optional string pinnedAt = 8;
    optional string modifiedAt = 9;
    optional string archivedAt = 10;

    optional int64 size = 11;
    optional string thumbnail = 12;
    optional string description = 13;
  }

  repeated Item items = 1;
  int32 total = 2;
  int32 limit = 3;
  optional string prevCursor = 4;
  optional string nextCursor = 5;
}

message CreateFolderResponse {
  optional string id = 1;
  optional string name = 2;
  optional int64 size = 3;
  optional string ownerId = 4;
  optional string parentId = 5;
  optional string createdAt = 6;
  optional string pinnedAt = 7;
  optional string modifiedAt = 8;
  optional string archivedAt = 9;
}

message UpdateFolderResponse {
  string id = 1;
  optional string name = 2;
  optional int64 size = 3;
  optional string ownerId = 4;
  optional string parentId = 5;
  optional string createdAt = 6;
  optional string pinnedAt = 7;
  optional string modifiedAt = 8;
  optional string archivedAt = 9;
}

message DeleteFolderResponse {
  string id = 1;
}